# AutoGenerateAtlassianConfluenceWikiAgent

./: .env.example  .gitignore  CLAUDE.md  README.md  SETUP_COMPLETE.md  demo.py  example_usage.py  jackyaiapp_api_database_report.md  logging_config.yaml  main.py  pyproject.toml  requirements.txt  smart_codebase_agent.py  start.py  test_comprehensive_agent.py  test_multi_agent_system.py
generated_docs/: document_1_20250703_235009.md  index.md
src/: config.py  main.py  multi_agent_main.py
src/agents/: __init__.py  code_retrieval_agent.py  codebase_analysis_agent.py  confluence_publishing_agent.py  documentation_generation_agent.py  query_refinement_agent.py
src/agents/comprehensive_codebase_agent/: __init__.py  agent.py
src/agents/comprehensive_codebase_agent/tools/: file_reader.py  (+6 more)
src/agents/smart_codebase_agent/: __init__.py  agent.py
src/ai_agents/: __init__.py  configure_handoffs.py
src/ai_agents/analysis_agent/: __init__.py  agent.py
src/ai_agents/code_explorer_agent/: __init__.py  agent.py
src/ai_agents/github_agent/: __init__.py  agent.py
src/ai_agents/report_agent/: __init__.py  agent.py
src/ai_agents/save_or_upload_report_agent/: __init__.py  agent.py
src/ai_agents/supervisor_agent/: __init__.py  agent.py
src/logging_system/: __init__.py  logger.py
src/models/: claude_model.py
src/tests/: test_comprehensive_agent.py  test_markdown_output.py  test_smart_agent.py
src/tools/: __init__.py  batch_operations.py  context_operations.py  file_operations.py  formatting_tools.py  git_operations.py  report_operations.py
tests/: test_basic.py
(+4 files in other folders)
