[project]
name = "autogenerateatlassianconfluencewikiagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.93.0",
    "openai-agents[litellm]>=0.1.0",
    "python-dotenv>=1.1.1",
    "atlassian-python-api>=3.41.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.0",
]
